--- a/Hoff/Info.plist
+++ b/Hoff/Info.plist
@@ -56,5 +56,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>User Interface Style</key>
+	<string>Light</string>
 </dict>
 </plist>
